--- a/print.html
+++ b/print.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>DIYgod的简历</title>
-    <meta name="description" content="我是一个充满活力、对前端由衷热爱、善于发现问题的前端工程师。我目前正在寻找前端工程师岗位，希望借此机会为贵司献上我的一点绵薄之力，快招我到碗里来吧！">
-    <meta name="keywords" content="DIYgod,前端,工作,简历">
+    <title>小样儿的简历</title>
+    <meta name="description" content="来了，看了，乐了，走了！">
+    <meta name="keywords" content="你,还来,干什么,闹着玩的">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="dist/css/style.min.css">
     <link rel="stylesheet" href="dist/css/print.min.css">
@@ -15,13 +15,13 @@
     <div class="sidebar">
         <div class="title">
             <img src="img/head.png" data-action="zoom">
-            <h1>DIYgod的简历</h1>
-            <h2>(゜-゜)つロ 干杯~</h2>
+            <h1>小样儿的简历</h1>
+            <h2>(゜-゜)つロ 开心~</h2>
         </div>
         <ul class="side-info">
             <li class="someRight">
                 <dt><i class="icon-bookmark"></i>Contact. 联系方式</dt>
-                <dd><i class="icon-phone-1"></i>电话: □□□□□</dd>
+                <dd><i class="icon-phone-1"></i>电话: 020-130300000007</dd>
                 <dd><i class="icon-mail-alt"></i>邮箱: <a href="mailto:i@html.love" target="_blank">i@html.love</a></dd>
                 <dd><i class="icon-wechat"></i>微信: DIYgod</dd>
                 <dd><i class="icon-qq"></i>QQ: <a href="http://wpa.qq.com/msgrd?v=3&uin=306578968&site=qq&menu=yes" target="_blank">306578968</a></dd>
