--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>王二狗的个人简历</title>
+    <title>个人简历</title>
     <meta name="description" content="hire me">
     <meta name="keywords" content="java,工作,简历">
     <link rel="shortcut icon" href="favicon.jpg">
@@ -40,8 +40,8 @@
             <li class="someRight">
                 <dt><i class="icon-bookmark"></i>基本信息</dt>
                 <dd><i class="icon-phone-1"></i>本科</dd>
-                <dd><i class="icon-mail-alt"></i>太阳学院</dd>
-                <dd><i class="icon-wechat"></i>银河系大学</dd>
+                <dd><i class="icon-mail-alt"></i>XX学院</dd>
+                <dd><i class="icon-wechat"></i>XX大学</dd>
                 <dd><i class="icon-qq"></i>2019.6</dd>
             </li>
             <li class="someRight">
