--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     </div>
     <div class="main">
         <!--<img style="position: absolute; top: 0; right: 0; border: 0;" src="img/hire_me_now.jpeg"></a>-->
-        <p style="font-size: 38px;line-height:55px">王二狗</p>
-        <p style="font-size: 18px;margin-bottom: 30px;color: rgba(0,0,0,.8)">求职意向: JavaWeb 后端开发</p>
+        <p style="font-size: 38px;line-height:55px">小样儿</p>
+        <p style="font-size: 18px;margin-bottom: 30px;color: rgba(0,0,0,.8)">闹着玩: 随便</p>
         <ul class="main-info">
 
             <!--一级标题: 项目经验-->
